--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
     </div>
 
     <div class="button-box">
-        <input class="onclick-button"type="button" value="change" onclick="dochange()">
+        <input class="onclick-button" type="button" value="Change" onclick="dochange()">
+        <input class="onclick-button" type="button" value="Confirm" onclick="doconfirm()">
     </div>
+    <p id="demo"></p>
 
     <script src="https://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js"></script>
     
