--- a/index.html
+++ b/index.html
@@ -51,7 +51,37 @@
             <p id="demo"></p>
         </div> -->
     </div>
-    
+
+    <h2>Canvas practice</h2>
+    <div class="canvas-container">
+        <canvas id="canvas-box1" class="box-color">
+
+        </canvas>
+        <canvas id="canvas-box2" class="box-color">
+
+        </canvas>
+    </div>
+
+    <div class="button-box">
+        <ul class="button-list">
+
+            <li>
+                <input class="onclick-button" type="button" value="Change color of canvas" onclick="changeColorOfCanvas()">
+            </li>
+            <li>
+                <input class="onclick-button" type="button" value="Make them blue!" onclick="doBlue()">
+            </li>      
+            <li>
+                <input class="onclick-button" type="button" value="Make them yellow!" onclick="doYellow()">
+            </li>     
+            <li>
+                <input class="onclick-button" type="button" value="Draw rectangles" onclick="drawRectangles()">
+            </li> 
+            <li>
+                <input class="onclick-button" type="button" value="Clear context" onclick="clearContext()">
+            </li>  
+        </ul>
+    </div>
 
     <script src="https://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js"></script>
     
