--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
             <input type="range" id="sizeInput" min="1" max="50" value="50" oninput="resizeBrush(this.value)">
         <output id="sizeOutput">50</output>
         </p>
+        <p>
+            <input type="button" id="clear" value="Clear Canvas" onclick="clearCanvas()">
+        </p>
         
         <div class="button-square-box">
             <ul class="button-list">
